Fix types and spacing

--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,6 +1,6 @@
 .sidebar {
   width: 200px;
-  padding: 50px 20px;
+  padding: 0px 20px;
   position: fixed;
   top: 0;
   left: 0;
